src/interpreter/snapshots/rlox__interpreter__tests__interpreter@this__closure.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/this/closure.lox
---
Foo
