src/interpreter/snapshots/rlox__interpreter__tests__interpreter@this__nested_class.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/this/nested_class.lox
---
Outer instance
Outer instance
Inner instance
