src/interpreter/snapshots/rlox__interpreter__tests__interpreter@this__nested_closure.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/this/nested_closure.lox
---
Foo
