src/interpreter/snapshots/rlox__interpreter__tests__interpreter@this__this_in_method.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/this/this_in_method.lox
---
baz
