src/interpreter/snapshots/rlox__interpreter__tests__interpreter@this__this_in_top_level_function.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/this/this_in_top_level_function.lox
---
Resolver error(s):
[ line 2 ] : Can't use 'this' outside of a class.
